Avances hasta el rest, faltan algunas entidades en la carpeta rest y falta medicalrecord en las demas, para su buen funcionamiento